welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
	var x:Boolean = false
	for (i <- 0 to nums.length-3) {
		if (nums(i)==1 && nums(i+1)==2 && nums(i+2)==3) {x=true}
		}
	}
	return x
}
